--- a/Client/src/components/Auth/Login.css
+++ b/Client/src/components/Auth/Login.css
@@ -8,9 +8,11 @@
     background-image: url("https://img.freepik.com/free-vector/gradient-technological-background_23-2148884155.jpg?semt=ais_hybrid");
      background-repeat: no-repeat;
     background-size: cover;
-    
     overflow: hidden;
     height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
 }
 .login-container {
@@ -166,4 +168,30 @@
 
 .social-icons .bi-linkedin {
     color: #445e98;
+}
+
+.animated-text{
+    width: 40%;
+    text-align: center;
+    color: white;
+    animation: SlideUp 10s ease-in-out forwards infinite;
+}
+
+.animated-text h1{
+    font-size: 4rem ;
+}
+
+@keyframes SlideUp {
+  0% {
+    transform: translateZ(-100%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateZ(100%);
+    opacity: 0;
+  }
 }
