--- a/Client/src/components/Landing/About/section/section.css
+++ b/Client/src/components/Landing/About/section/section.css
@@ -5,6 +5,7 @@
    padding: 10px;
    background-color: white;
    border-radius: 6px;
+   color: black;
 
 }
 
@@ -23,6 +24,7 @@
 .card h2{
     text-align: center;
     font-size: 28px;
+    color: black;
 }
 
 .card p{
